--- a/components/PromotionCard.module.css
+++ b/components/PromotionCard.module.css
@@ -110,7 +110,7 @@
   font-size: 14px;
   color: #666;
   margin: 4px 0;
-  line-height: 1.4;
+  line-height: 1.5;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
